@@ -463,6 +463,9 @@ process_pos_indel_single_sample(
             starling_indel_report_info iri;
             get_starling_indel_report_info(ik,id,_ref,iri);
 
+            // STARKA-248 filter invalid indel. TODO: filter this issue earlier (occurs as, e.g. 1D1I which matches ref)
+            if (iri.vcf_indel_seq == iri.vcf_ref_seq) continue;
+
             double indel_error_prob(0);
             double ref_error_prob(0);
             scoring_models::Instance().get_indel_model().calc_prop(_opt,iri,indel_error_prob,ref_error_prob);
